# sensor-and-motor-tests

./: .gitignore  README.md  main.py  pyproject.toml
sensor_and_motor_tests/: __init__.py  app.py
sensor_and_motor_tests/_dev/: console-menu.py
sensor_and_motor_tests/constants/: __init__.py  directions.py
sensor_and_motor_tests/ev3apps/: __init__.py  basically_a_car.py  guntank.py  tacho_guntanky.py
sensor_and_motor_tests/utils/: __init__.py  event_helpers.py
tests/: test_sensor_and_motor_tests.py
