[tool.poetry]
name = "sensor-and-motor-tests"
version = "0.1.0"
description = ""
authors = ["Andy Maskiell <maskiella@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pybricks = "^3.1.0"
python-ev3dev = "^1.2.0"
python-ev3dev2 = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
